Changes in question 1

--- a/PEC1_pipeline.Rmd
+++ b/PEC1_pipeline.Rmd
@@ -36,12 +36,27 @@ En este trabajo en cuestión, vamos a encontrarnos con 40 muestras diferentes, c
 
 ```{r}
 feno <- archivos@phenoData
-feno@data[,1]=c(rep("Control CA3",7),rep("Learning Activated CA3",7),rep("Control CA1",6),rep("Learning Activated CA1",6),rep("Control DG",7),rep("Learning Activated DG",7))
+nombres=c(rep("Control CA3",7),rep("Learning Activated CA3",7),rep("Control CA1",6),rep("Learning Activated CA1",6),rep("Control DG",7),rep("Learning Activated DG",7))
+feno@data[,1]=nombres
 feno@data
+feno$sample
 ```
 
-De esta forma forma obtendremos tantos los datos de expresiön como los fenotípicos de la muestra. 
+De esta forma forma obtendremos tantos los datos de expresión como los fenotípicos de la muestra. También podemos hacer este mismo procedimiento, pero gracias a la importación de los datos a través del archivo .txt (y no del .CEL) que nos aporta el problema.
 
+```{r}
+fenotipo<-file.path("matrix.txt")
+fenotipo <- as.matrix(read.table(file = fenotipo, header = T, sep = "\t", row.names = 1, as.is = T))
+dim(fenotipo)
+#las filas serán los genes y sus expresiones
+print(rownames(fenotipo), max = 10)
+#las columnas serán los anteriores nombres de los archivos, que de hecho podemos cambiar como hicimos en la otra manera de hacerlo anterior
+colnames(fenotipo)
+sapply(fenotipo, FUN = class)
+str(fenotipo)
+colnames(fenotipo)=nombres
+colnames(fenotipo)
+```
 
 
 
