--- a/PEC1_pipeline.Rmd
+++ b/PEC1_pipeline.Rmd
@@ -18,6 +18,8 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r paquetes, include=FALSE}
 setwd("C:/Users/Sara/Desktop/alvarezgonzalez_sara_ADO_PEC1")
 library(affy)
+library(simpleaffy)
+library(affyPLM)
 ```
 ***
 
@@ -36,7 +38,17 @@ En este trabajo en cuestión, vamos a encontrarnos con 40 muestras diferentes, c
 
 ```{r}
 feno <- archivos@phenoData
-nombres=c(rep("Control CA3",7),rep("Learning Activated CA3",7),rep("Control CA1",6),rep("Learning Activated CA1",6),rep("Control DG",7),rep("Learning Activated DG",7))
+
+nombres=c(rep("CA3_cont",7),rep("CA3_act",7),rep("CA1_cont",6),rep("CA1_act",6),rep("DG_cont",7),rep("DG_act",7))
+nombres<-paste0(nombres,"_")
+CA3_control<-paste0(nombres[1:7],1:7)
+CA3_exp<-paste0(nombres[8:14],1:7)
+CA1_control<-paste0(nombres[15:20],1:6)
+CA1_exp<-paste0(nombres[21:26],1:6)
+DG_control<-paste0(nombres[27:33],1:7)
+DG_exp<-paste0(nombres[34:40],1:7)
+nombres <- c(CA3_control,CA3_exp,CA1_control,CA1_exp,DG_control,DG_exp)
+
 feno@data[,1]=nombres
 feno@data
 feno$sample
@@ -49,7 +61,7 @@ fenotipo<-file.path("matrix.txt")
 fenotipo <- as.matrix(read.table(file = fenotipo, header = T, sep = "\t", row.names = 1, as.is = T))
 dim(fenotipo)
 #las filas serán los genes y sus expresiones
-print(rownames(fenotipo), max = 10)
+print(rownames(fenotipo), max = 5)
 #las columnas serán los anteriores nombres de los archivos, que de hecho podemos cambiar como hicimos en la otra manera de hacerlo anterior
 colnames(fenotipo)
 colnames(fenotipo)=nombres
@@ -58,27 +70,43 @@ colnames(fenotipo)
 
 ##2. Control de calidad de los datos crudos.
 
-Una manera muy intuitiva de comprobar la calidad de los datos crudos, como se ha dicho en el apartado anterior, es mediante la observación de su comportamiento a través de gráficas. En este caso no se consideró el hacer un reconocimiento descriptivo, debido al tipo de datos con los que tratamos, ya que en la manera en la que están cargados, el hecho de que sean varias muestras diferentes dificultaría tal objetivo, haciendo esta primera observación menos intuitiva:
+En primer lugar se ha hecho una análisis del control de calidad de los datos a través de datos gráficos, más intuitivamente analizables como facilitador de un screening sobre los datos crudos:
   
 ```{r,warning=FALSE}
 #boxplot
 colores = c(rep("red",14),rep("blue",12),rep("yellow",14))
-boxplot(archivos,las=2, cex.axis=0.7, names=nombres, col=colores)
+boxplot(archivos,las=2, cex.axis=0.7, names=nombres, col=colores,ylab="Luminiscencia")
 #histograma
 hist(archivos,col=colores)
 legend("topright", c("CA3", "CA1", "DG"), fill=c("red","blue","yellow"))
 #clúster jerárquico
 clust.euclid.average <- hclust(dist(t(exprs(archivos))),method="average")
-plclust(clust.euclid.average, main="Hierarchical clustering of samples",  hang=-1)
+plot(clust.euclid.average, main="Clúster jerárquico de Datos crudos",  hang=-1)
 ```
 
-Los dos primeros (boxplot e histograma) son los dos gráficos que mejor nos permiten obsevar las disparidades de estos datos en crudo (*raw data*). Esto es así debido a que el primero de ellos nos permite ver la distribución de las intensidades, mientras que el segundo ver la similitud en forma y posición de las diferentes muestras.Se ha facilitado la interpretación de estas dos primeros gráficos a través de colores, pintando los de cada región de un color, incluyendo a los de control o experimentales.
+Los dos primeros (boxplot e histograma) son los dos gráficos que mejor nos permiten obsevar las disparidades de estos datos en crudo (*raw data*). Esto es así debido a que el primero de ellos nos permite ver la distribución de las luminiscencias, mientras que el segundo ver la similitud en forma y posición de las diferentes muestras.Se ha facilitado la interpretación de estos dos primeros gráficos a través de colores, pintando los de cada región de un color, incluyendo a los de control o experimentales.
 
-A simple vista, el boxplot nos muestra cierta variabilidad entre los datos, aunque vemos que los que son de la misma región van a moverse por una zona similar, aunque no es posible decir si esta relación es significativa a simple vista. En cuanto al histograma, podemos observar que de nuevo, aparentemente, se mueven por las mismas zonas aquellas observaciones realizadas a las zonas homónimas.
+A simple vista, el boxplot nos muestra cierta variabilidad entre los datos, aunque vemos que los que son de la misma región van a moverse por una zona similar de luminiscencia, aunque no es posible decir si esta relación es significativa a simple vista. En cuanto al histograma, podemos observar que de nuevo, aparentemente, se mueven por las mismas zonas aquellas observaciones realizadas a las zonas homónimas.
 
 El tercer gráfico elegido para realizar una pequeña visula, será el de la jerarquización de las muestras a través de clústers. De manera aparente, da la sensación de que sí que existe cierta distinción entre las tres zonas analizadas, aunque tal y como son los datos resulta difícil sacar una conclusión.
 
 Será por tanto necesario, previo a sacar ninguna conclusión o analizarlos, llevar a cabo una normalización de los mismos.
+
+Sin embargo, antes de pasar a la normalización, también resulta interesante echar un ojo al resultado del control de calidad que la función *qc* nos reporta:
+
+```{r}
+calidad <- qc(archivos)
+plot(calidad)
+```
+
+Este informe nos enseña, desde un gráfico parcialmente descriptivo: el nombre del fichero .CEL, el porcentaje de sondas que han detectado fluorescencia (con la fluorescencia de fondo) y en la tercera columna, siendo la más destacable en nuestro caso, nos va a decir, en un primer momento, la calidad relativa a problemas de degradación del RNA. Debido a que en nuestro caso, todas van a ser azules, esto indicaría que no es algo por lo que deberíamos descartar ninguna de las muestras.
+
+De manera extra, ya que tampoco resulta demasiado funcional teniendo en cuenta la cantidad de datos con los que estamos trabajando, también sería posible hacer un análisis de calidad representando una imagen global de la fluorescencia de los microarrays con la función *image* con la columna que seleccionemos (fichero .CEL, es decir, la muestra entera).
+
+```{r}
+image(archivos[,6],col=rainbow(100),main="CA3_cont_6")
+```
+
 
 ##3. Normalización
 
@@ -89,7 +117,7 @@ normalizacion <- rma(archivos)
 normalizacion
 class(normalizacion)
 matriz <- exprs(normalizacion)
-head(matriz)
+head(matriz,2)
 ```
 
 Es de destacar que para llevar a cabo esta normalización, antes de convertirla en una matriz facilmente manipulable para posteriores funciones, el objeto que nos devuelve será uno del tipo *ExpressionSet*, como el trabajado en los foros. Como su propia clase lo define, es como un paso intermedio entre los datos tal y como nos los dan, a manipularlos de manera sencilla (subconjuntos de datos, copia, cambio de formato...). Obtendremos así, con una simple transformación con la función *exprs*, una matriz con los datos sumarizados y normalizados. 
@@ -101,7 +129,37 @@ dim(matriz)
 Es decir, obtenemos una matriz con la expresión del ARN como filas, mientras que como columnas estarán los 40 experimentos con las distintas condiciones comentadas previamente. De hecho, por comodidad podemos cambiárselo para que sea más sencillo, como anteriormente.
 
 ```{r}
-colnames(matriz) = nombres
+colnames(matriz) <- nombres
+head(matriz,2)
 ```
+
+
+##4. Control de calidad de los datos normalizados
+
+De la misma manera que hicimos previamente, la representación gráfica será la mejor manera de llevar a cabo un control de calidad de los datos, en este caso normalizados. Como los datos siguen siendo los mismos, utilizaremos de nuevo los dos métodos gráficos que más sentido tenían en nuestro trabajo. Como complemento, es interesante si ponemos al lado la gráfica correspondiente a cuando estaban sin normalizar, percibiendo mejor el cambio de un caso a otro:
+
+```{r}
+#boxplot
+par(mfrow=c(1,2))
+boxplot(normalizacion,las=2, cex.axis=0.7,names=nombres, col=colores,ylab="Luminiscencia",main="Datos normalizados")
+boxplot(archivos,las=2, cex.axis=0.7, names=nombres, col=colores,ylab="Luminiscencia",main="Datos crudos")
+#histograma
+par(mfrow=c(1,2))
+hist(normalizacion,col=colores,main="Datos normalizados")
+legend("topright", c("CA3", "CA1", "DG"), fill=c("red","blue","yellow"))
+hist(archivos,col=colores,main="Datos crudos")
+legend("topright", c("CA3", "CA1", "DG"), fill=c("red","blue","yellow"))
+#cluster
+par(mfrow=c(1,2))
+clust.euclid.average <- hclust(dist(t(exprs(normalizacion))),method="average")
+plot(clust.euclid.average, main="Clúster jerárquico de Datos normalizados",  hang=-1)
+clust.euclid.average <- hclust(dist(t(exprs(archivos))),method="average")
+plot(clust.euclid.average, main="Clúster jerárquico de Datos crudos",  hang=-1)
+```
+
+Como podemos ver, ahora sí hemos logrado tener unos datos que se muevan todos en los mismos valores, pudiendo analizarlos de manera más segura y habiendo quitado parte del sesgo que pudieran traer por la disparidad previa de unos con otros. En los tres gráficos que aquí se muestran, se puede comprobar que ahora, al moverse adecuadamente las expresiones de los genes dentro de un mismo rango, llevar a cabo los siguientes análisis será más adecuado. Pormenorizadamente, los boxplot lograron establecerse en un mismo grado de luminiscencia, el histograma logarítmico homogeneizarse en las tres áreas cerebrales estudiadas y el clústering jerárquico ser capaz de subdividir los datos en las tres secciones diferenciadas de manera más clara y acertada frente a los datos en crudo.
+
+
+
 
 </div>
